Continuidade do projetro em diversos arquivos e criação de arquivos com função de admin
